# edge-ai-infra

./: .gitignore  Dockerfile  Dockerfile.gateway  Makefile  README.md  docker-compose.qdrant.yml  docker-compose.yml  prometheus.yml  pyproject.toml  request.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/chat/: route.ts
frontend/components/: chat-input.tsx  chat-messages.tsx  chat-sidebar.tsx  citations-panel.tsx  code-block.tsx  document-selector.tsx  markdown-renderer.tsx
frontend/hooks/: use-chat.ts
frontend/lib/: types.ts
gateway/: main.py
gateway/auth/: routes.py  schemas.py
gateway/cli/: chat_cli.py  ingest_cli.py
gateway/core/: config.py
gateway/metrics/: metrics.py
gateway/notebooks/: rag.ipynb  rag_eval.ipynb
gateway/routes/: __init__.py  chat.py  metrics.py
gateway/services/: __init__.py  vllm_client.py
gateway/services/rag/: __init__.py  chunker.py  document_parser.py  embedder.py  prompt_builder.py  query_rewriter.py  rag_service.py  retriever.py  vector_store.py
scripts/: entrypoint.sh
stress_test/: debug_rag.py  stress_test.py  test_vector_store.py
tests/: check_id.py  embedding-test.py  test_query_rewriter.py
