[project]
name = "edge-computing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiodns>=4.0.0",
    "aiohttp>=3.13.3",
    "fastapi>=0.129.0",
    "gunicorn>=25.1.0",
    "httpie>=3.2.4",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.40.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["gateway*"]
