[project]
name = "edge-computing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
    "aiodns>=4.0.0",
    "aiohttp>=3.13.3",
    "docling>=2.74.0",
    "docling-core[chunking-openai]>=2.65.1",
    "faiss-gpu-cu12>=1.13.2",
    "fastapi>=0.129.0",
    "fitz>=0.0.1.dev2",
    "gunicorn>=25.1.0",
    "httpie>=3.2.4",
    "langchain-text-splitters>=1.1.1",
    "prometheus-client>=0.24.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pymupdf>=1.27.1",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.17.0",
    "sentence-transformers>=5.2.3",
    "tiktoken>=0.12.0",
    "tokenizers>=0.22.2",
    "transformers>=4.57.6",
    "uvicorn>=0.40.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["gateway*"]
